nav bar converted to grid to fix alignment

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,9 +1,8 @@
 @import 'variables/variables';
 
 nav {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	align-items: center;
 	height: 10vh;
 	background-color: $background-color;
@@ -23,16 +22,17 @@ nav {
 		}
 	}
 	ul {
-		display: flex;
+		display: grid;
+		grid-template-columns: repeat(4, 1fr);
 		list-style-type: none;
-		justify-content: space-around;
+		justify-items: center;
 		align-items: center;
-		width: 50vw;
+		width: 100%;
 		height: 100%;
 		li {
 			transition: all 0.3s;
 			height: 100%;
-			width: 25%;
+			width: 100%;
 			flex-grow: 1;
 			display: flex;
 			justify-content: center;
